fixed styling errors